force-app/main/default/objects/Fieldset_Setting__mdt/Fieldset_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Fieldset Setting</label>
    <pluralLabel>Fieldset Settings</pluralLabel>
</CustomObject>