force-app/main/default/objects/Fieldset_Setting__mdt/fields/Candidate_Fieldset_in_Modal__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Fieldset_in_Modal__c</fullName>
    <label>Candidate Fieldset in Modal</label>
    <length>30</length>
    <type>Text</type>
</CustomField>