force-app/main/default/objects/Fieldset_Setting__mdt/fields/Inaccessible_fields__c.field-meta.xml
<CustomField>
    <fullName>Inaccessible_fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inaccessible fields</label>
    <type>Checkbox</type>
</CustomField>