force-app/main/default/objects/Fieldset_Setting__mdt/fields/Job_Application_Fieldset_in_Modal__c.field-meta.xml
<CustomField>
    <fullName>Job_Application_Fieldset_in_Modal__c</fullName>
    <label>Job Application Fieldset in Modal</label>
    <length>30</length>
    <type>Text</type>
</CustomField>